Melhorias diversas no arquivo de utilidade